# RenHook

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  clang-format.yml
Dependencies/Capstone/: premake5.lua
Premake/: premake5.lua
Source/: premake5.lua
Source/RenHook/: RenHook.cpp  RenHook.hpp
Source/RenHook/Capstone/: Capstone.cpp  Capstone.hpp
Source/RenHook/ExecutableMeta/: ExecutableMeta.cpp  ExecutableMeta.hpp
Source/RenHook/Hooks/: Hook.cpp  Hook.hpp  Hooks.cpp  Hooks.hpp
Source/RenHook/Memory/: Block.cpp  Block.hpp  Protection.cpp  Protection.hpp
Source/RenHook/Pattern/: Pattern.cpp  Pattern.hpp
Source/RenHook/Threads/: Thread.cpp  Thread.hpp  Threads.cpp  Threads.hpp
cmake/: ConfigureAndIncludeCatch2.cmake  ConfigureAndIncludeZydis.cmake
cmake/templates/: RenHook.pc.in  RenHookConfig.cmake.in  pch.hpp.in
include/renhook/: config.hpp  exceptions.hpp  renhook.hpp
include/renhook/detail/: core.hpp
source/: CMakeLists.txt
source/renhook/: exception.cpp  pattern.hpp  version.hpp  version.hpp.in
src/: CMakeLists.txt  exceptions.cpp
src/renhook/: exception.hpp  executable.cpp  executable.hpp  hook_writer.cpp  hook_writer.hpp  pattern.cpp  pattern.hpp  renhook.hpp  suspend_threads.cpp  suspend_threads.hpp  utils.cpp  utils.hpp  version.hpp  version.hpp.in  zydis.cpp  zydis.hpp
src/renhook/hooks/: inline_hook.hpp  prologue_hook.hpp
src/renhook/memory/: allocator.cpp  allocator.hpp  memory_allocator.cpp  memory_allocator.hpp  protection_enum.hpp  utils.hpp  virtual_protect.cpp  virtual_protect.hpp
tests/: CMakeLists.txt  exceptions.cpp  executable.cpp  hook_writer.cpp  pattern.cpp  suspend_threads.cpp  utils.cpp  zydis.cpp
tests/hooks/: inline_hook.cpp  prologue_hook.cpp
tests/memory/: allocator.cpp  memory_allocator.cpp  utils.cpp  virtual_protect.cpp
